--- a/nba/package.json
+++ b/nba/package.json
@@ -8,6 +8,7 @@
     "@emotion/styled": "^11.8.1",
     "@material-ui/core": "^4.12.3",
     "@material-ui/pickers": "^3.3.10",
+    "@mui/icons-material": "^5.5.1",
     "@mui/lab": "^5.0.0-alpha.74",
     "@mui/material": "^5.5.2",
     "@testing-library/jest-dom": "^5.16.2",
@@ -16,6 +17,7 @@
     "axios": "^0.26.1",
     "date-fns": "^2.28.0",
     "express": "^4.17.3",
+    "next": "^12.1.1",
     "nodemon": "^2.0.15",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
